# nixpkgs-failure-dashboard

./: README.md  build-all-packages.sh  default.nix  pyproject.toml  run-build.sh
app/: classify.py  dummy_setup.py  main.py  tagging.py
src/: App.scss
